# Vroom

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  Vroom.sln
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/Resources/: Test_ShaderData.json
Sandbox/Resources/Meshes/: Mat_Textured_Cube.json  Mat_Top.asset  colored_cube.mtl
Sandbox/Resources/Scenes/: SceneTest.scene
Sandbox/Resources/Shaders/: Mat_Sides_PreFrag.glsl  TestEarlySource.glsl  TestFrag.glsl  TestVert.glsl  Test_ShaderData.json
Sandbox/include/Scripts/: MovingLightScript.h  SuzanneScript.h
Sandbox/src/: SandboxApp.cpp  main.cpp
Sandbox/src/Scripts/: MovingLightScript.cpp  SuzanneScript.cpp
ScriptApi/: CMakeLists.txt
ScriptApi/include/ScriptApi/: Api.h  ScriptApi.h  ScriptApiImplementation.h  ScriptFactory.h  ScriptLibrary.h
ScriptApi/src/: ScriptApi.cpp  ScriptApiImplementation.cpp
TestProject/: CMakeLists.txt
TestProject/Scripts/: CMakeLists.txt
TestProject/Scripts/src/: SuzanneScript.cpp
Vroom/: CMakeLists.txt  Vroom.vcxproj  Vroom.vcxproj.filters
Vroom/Application/: CMakeLists.txt
Vroom/Application/src/: Application.cpp  GameLayer.cpp  Layer.cpp
Vroom/AssetManager/: CMakeLists.txt
Vroom/AssetManager/src/: AssetManager.cpp  ComponentDataMap.cpp  ComponentParsing.cpp  CubemapAsset.cpp  CubemapParsing.cpp  Json.cpp  JsonFile.cpp  MaterialAsset.cpp  MaterialData.cpp  MaterialParsing.cpp  MeshAsset.cpp  ParticleSystemAsset.cpp  PathHelpers.cpp  SceneAsset.cpp  SceneNodeParsing.cpp  SceneParsing.cpp  ScriptAsset.cpp  ShaderAsset.cpp  ShaderData.cpp  ShaderParsing.cpp  ShadingModelAsset.cpp  StaticAsset.cpp  TextureAsset.cpp  VirtualDirectoriesEmulator.cpp
Vroom/Core/: CMakeLists.txt
Vroom/Core/src/: DeltaTime.cpp  Log.cpp  PerfRecorder.cpp  Profiler.cpp
Vroom/Editor/: CMakeLists.txt  imgui.ini  main.cpp  scriptsBuilder.sh
Vroom/Editor/DefaultScripts/: CMakeLists.txt
Vroom/Editor/src/: AssetBrowser.cpp  AssetDirectory.cpp  AssetElement.cpp  AssetFile.cpp  AssetFileMaterialAsset.cpp  AssetFileMeshAsset.cpp  AssetFileSceneAsset.cpp  AssetFileScriptAsset.cpp  AssetFileTextureAsset.cpp  AssetParentDir.cpp  AssetUtils.cpp  BrowserNode.cpp  ComponentEditor.cpp  DirectionalLightComponentEditor.cpp  EditorCamera.cpp  EditorLayer.cpp  EditorPreferences.cpp  EmitterAttributeEditor.cpp  EmitterEditor.cpp  EmitterFieldEditor.cpp  EmitterScalarEditor.cpp  EntityEditor.cpp  ImGuiElement.cpp  MainMenuBar.cpp  MaterialDataExtractor.cpp  MaterialEditor.cpp  MeshComponentEditor.cpp  ModelImporter.cpp  NameComponentEditor.cpp  ParticleSystemEditor.cpp  PointLightComponentEditor.cpp  ProfilingPanel.cpp  RenderSettingsPanel.cpp  SceneGraph.cpp  ScriptHandlerEditor.cpp  SkyboxComponentEditor.cpp  TransformComponentEditor.cpp  UserInterfaceLayer.cpp  Viewport.cpp  ViewportModule.cpp
Vroom/EditorModules/: CMakeLists.txt
Vroom/Event/: CMakeLists.txt
Vroom/Event/src/: CustomEventBinder.cpp  CustomEventManager.cpp  GLFWEventsConverter.cpp  Trigger.cpp  TriggerBinder.cpp  TriggerManager.cpp
Vroom/ModuleTemplate/: CMakeLists.txt
Vroom/Physics/: CMakeLists.txt
Vroom/Physics/src/: JoltBroadPhaseLayerInterface.cpp  JoltObjectLayerPairFilter.cpp  JoltObjectVsBroadPhaseLayerFilter.cpp  JoltPhysics.cpp  Physics.cpp  PhysicsLayer.cpp  PhysicsLayerList.cpp
Vroom/Rasterizer/: CMakeLists.txt
Vroom/Rasterizer/src/: AutoBuffer.cpp  Buffer.cpp  FrameBuffer.cpp  Shader.cpp  StructuredBuffer.cpp  Texture.cpp  VertexArray.cpp
Vroom/RenderObjects/: CMakeLists.txt
Vroom/RenderObjects/src/: MeshData.cpp  RenderMesh.cpp  RenderObjectsManager.cpp  ShaderManager.cpp
Vroom/Renderer/: CMakeLists.txt
Vroom/Renderer/src/: BlitFrameBufferPass.cpp  CameraBasic.cpp  ClearFramebufferPass.cpp  ClearTexturePass.cpp  CustomPassSlot.cpp  DrawScenePass.cpp  FirstPersonCamera.cpp  GPURuntimeFeatures.cpp  GaussianBlurPass.cpp  LazyCamera.cpp  LightClusteringPass.cpp  LightRegistry.cpp  MaterialDefines.cpp  MeshMaterials.cpp  OrthographicCamera.cpp  ParticleEmitter.cpp  ParticleEmitterRender.cpp  PassMaterials.cpp  PerspectiveCameraBasic.cpp  RawCamera.cpp  RawParticleEmitterSpecs.cpp  RenderLayout.cpp  RenderParticlesPass.cpp  RenderPass.cpp  RenderPassManager.cpp  RenderPipeline.cpp  RenderResources.cpp  RenderSkyboxPass.cpp  RenderView.cpp  Renderer.cpp  ShadowMappingPass.cpp  ToneMappingPass.cpp
Vroom/Scene/: CMakeLists.txt
Vroom/Scene/src/: ColliderComponent.cpp  DirectionalLightComponent.cpp  Entity.cpp  MeshComponent.cpp  ParticleSystemComponent.cpp  PointLightComponent.cpp  Scene.cpp  SceneLoading.cpp  ScriptComponent.cpp  ScriptHandler.cpp  SkyboxComponent.cpp  TransformComponent.cpp
Vroom/ScriptApi/: CMakeLists.txt
Vroom/ScriptApi/src/: ScriptApiImplementation.cpp  ScriptFactory.cpp  ScriptLibrary.cpp
Vroom/ScriptEngine/: CMakeLists.txt
Vroom/ScriptEngine/src/: RuntimeScriptLibrary.cpp  ScriptComponentPtr.cpp  ScriptEngine.cpp
Vroom/Tools/: CMakeLists.txt
Vroom/Tools/src/: Os.cpp  Os_unix.cpp  Os_win32.cpp  (+3 more)
Vroom/Window/: CMakeLists.txt
Vroom/src/: RawParticleEmitterSpecs.cpp  Vroom.h
Vroom/tests/: CMakeLists.txt  test_AabbFrustum.cc  test_AssetManager.cc  test_Cameras.cc  test_ComponentData.cc  test_CustomEvent.cc  test_CustomEventManagerAndBinder.cc  test_DeltaTime.cc  test_Duration.cc  test_GLFWEventsConverter.cc  test_JsonGlm.cc  test_LinearRegistry.cc  test_MaterialData.cc  test_MeshAsset.cc  test_Promise.cc  test_Registry.cc  test_RenderLayout.cc  test_RenderView.cc  test_ResourcePool.cc  test_RuntimeLibrary.cc  test_RuntimeLibrary_DummyLib.cpp  test_Scene.cc  test_StaticAsset.cc  test_ToolsUtility.cc  test_TransformComponent.cc  test_Trigger.cc  test_TriggerCallbackList.cc  test_TriggerManagerAndBinder.cc  test_TwoWaysUnorderedMap.cc  test_VirtualDirectoriesEmulator.cc  test_Window.cc  test_main.cpp
VroomEditor/: CMakeLists.txt  imgui.ini  scriptsBuilder.bat  scriptsBuilder.sh
VroomEditor/Scripts/: CMakeLists.txt
VroomEditor/src/: EditorCamera.cpp  EditorLayer.cpp  EditorScene.cpp  main.cpp
(+796 files in other folders)
